--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "env-cmd -f ./config/dev.env pm2 start src/index.js --name task-manager-api"
+    "prod": "env-cmd -f ./config/prod.env pm2 start src/index.js --name task-manager-api"
   },
   "keywords": [],
   "author": "",
